crates/plotnik-lib/tests/02-parser/recovery_unclosed/missing_brace.txt
{(a) (b)
==== diagnostics ====
error: missing closing `}`
 --> query.ptk:1:1
  |
1 | {(a) (b)
  | -^^^^^^^
  | |
  | sequence started here
  |
help: add `}` to close the sequence
